[add] saveScenario classes

--- a/Proof of concept/.gitignore
+++ b/Proof of concept/.gitignore
@@ -9,6 +9,7 @@ Proof of concept/[Bb]uild/
 Proof of concept/[Bb]uilds/
 Proof of concept/[Ll]ogs/
 Proof of concept/[Mm]emoryCaptures/
+Proof of concept/Packages/packages-lock
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !Proof of concept/[Aa]ssets/**/*.meta
