--- a/Liquidwire/Packages/manifest.json
+++ b/Liquidwire/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.cinemachine": "2.6.4",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.render-pipelines.universal": "8.3.1",
